--- a/usr/lib/linuxmint/mintSources/mintSources.glade
+++ b/usr/lib/linuxmint/mintSources/mintSources.glade
@@ -1198,14 +1198,7 @@
           </object>
         </child>
         <child type="tab">
-          <object class="GtkLabel" id="label6">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="label" translatable="yes">TABLE</property>
-          </object>
-          <packing>
-            <property name="tab_fill">False</property>
-          </packing>
+          <placeholder/>
         </child>
         <child>
           <object class="GtkVBox" id="vbox_vte">
