Small fixes for duplicate entries
- Only write to sources when duplicates are actually found
- No need to reload the cache when none are found
- Show the infobar when a reload is wanted

--- a/usr/lib/linuxmint/mintSources/mintsources.glade
+++ b/usr/lib/linuxmint/mintSources/mintsources.glade
@@ -1066,7 +1066,7 @@
                         </child>
                         <child>
                           <object class="GtkButton" id="button_duplicates">
-                            <property name="label" translatable="yes">Remove duplicate repositories</property>
+                            <property name="label" translatable="yes">Remove duplicate entries</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
