--- a/usr/lib/linuxmint/mintSources/mintsources.glade
+++ b/usr/lib/linuxmint/mintSources/mintsources.glade
@@ -5,6 +5,7 @@
   <requires lib="xapp" version="0.0"/>
   <object class="GtkWindow" id="foreign_window">
     <property name="can-focus">False</property>
+    <property name="window-position">center</property>
     <property name="default-width">600</property>
     <property name="default-height">400</property>
     <child>
@@ -288,6 +289,7 @@
   </object>
   <object class="GtkWindow" id="main_window">
     <property name="can-focus">False</property>
+    <property name="window-position">center</property>
     <property name="default-width">800</property>
     <property name="default-height">500</property>
     <child>
@@ -1197,6 +1199,7 @@
   <object class="GtkDialog" id="mirror_selection_dialog">
     <property name="can-focus">False</property>
     <property name="title" translatable="yes">Select Mirror</property>
+    <property name="window-position">center</property>
     <property name="default-height">400</property>
     <property name="type-hint">dialog</property>
     <child internal-child="vbox">
@@ -1275,6 +1278,7 @@
   </object>
   <object class="GtkWindow" id="ppa_window">
     <property name="can-focus">False</property>
+    <property name="window-position">center</property>
     <property name="default-width">700</property>
     <property name="default-height">500</property>
     <child>
